--- a/pokedex/styles/types.css
+++ b/pokedex/styles/types.css
@@ -1,14 +1,23 @@
-span {
+
+/* Abilitys */
+#ability span {
+    border: 1px solid black;
+    background-color: lightgrey;
+    padding: 5px;
+    border-radius: 5px; 
+    display: inline-block;  
+    margin: 3px 0; 
+}
+
+
+/* Types */
+.fire{
+    border-color:black;
+    background-color: red;
     padding: 5px;
     margin-right: 5px;
     border: 2px solid transparent;
     border-radius: 5px;
-}
-
-
-.fire{
-    border-color:black;
-    background-color: red;
     
 }
 
@@ -16,4 +25,160 @@ span {
 .water{
     border-color:black;
     background-color:#019875 ;
+    padding: 5px;
+    margin-right: 5px;
+    border: 2px solid transparent;
+    border-radius: 5px;
+}
+
+.grass {
+    border-color: black;
+    background-color: #4CAF50;
+    padding: 5px;
+    margin-right: 5px;
+    border: 2px solid transparent;
+    border-radius: 5px;
+}
+
+.electric {
+    border-color: black;
+    background-color: #FFEB3B;
+    padding: 5px;
+    margin-right: 5px;
+    border: 2px solid transparent;
+    border-radius: 5px;
+}
+
+.psychic {
+    border-color: black;
+    background-color: #9C27B0;
+    padding: 5px;
+    margin-right: 5px;
+    border: 2px solid transparent;
+    border-radius: 5px;
+}
+
+.ice {
+    border-color: black;
+    background-color: #00BCD4;
+    padding: 5px;
+    margin-right: 5px;
+    border: 2px solid transparent;
+    border-radius: 5px;
+}
+
+.dragon {
+    border-color: black;
+    background-color: #3F51B5;
+    padding: 5px;
+    margin-right: 5px;
+    border: 2px solid transparent;
+    border-radius: 5px;
+}
+
+.dark {
+    border-color: black;
+    background-color: #212121;
+    padding: 5px;
+    margin-right: 5px;
+    border: 2px solid transparent;
+    border-radius: 5px;
+}
+
+.fairy {
+    border-color: black;
+    background-color: #F48FB1;
+    padding: 5px;
+    margin-right: 5px;
+    border: 2px solid transparent;
+    border-radius: 5px;
+}
+
+.normal {
+    border-color: black;
+    background-color: #A8A8A8;
+    padding: 5px;
+    margin-right: 5px;
+    border: 2px solid transparent;
+    border-radius: 5px;
+}
+
+.fighting {
+    border-color: black;
+    background-color: #D32F2F;
+    padding: 5px;
+    margin-right: 5px;
+    border: 2px solid transparent;
+    border-radius: 5px;
+}
+
+.flying {
+    border-color: black;
+    background-color: #90A4AE;
+    padding: 5px;
+    margin-right: 5px;
+    border: 2px solid transparent;
+    border-radius: 5px;
+}
+
+.poison {
+    border-color: black;
+    background-color: #880E4F;
+    padding: 5px;
+    margin-right: 5px;
+    border: 2px solid transparent;
+    border-radius: 5px;
+}
+
+.ground {
+    border-color: black;
+    background-color: #795548;
+    padding: 5px;
+    margin-right: 5px;
+    border: 2px solid transparent;
+    border-radius: 5px;
+}
+
+.rock {
+    border-color: black;
+    background-color: #8D6E63;
+    padding: 5px;
+    margin-right: 5px;
+    border: 2px solid transparent;
+    border-radius: 5px;
+}
+
+.bug {
+    border-color: black;
+    background-color: #8BC34A;
+    padding: 5px;
+    margin-right: 5px;
+    border: 2px solid transparent;
+    border-radius: 5px;
+}
+
+.ghost {
+    border-color: black;
+    background-color: #673AB7;
+    padding: 5px;
+    margin-right: 5px;
+    border: 2px solid transparent;
+    border-radius: 5px;
+}
+
+.steel {
+    border-color: black;
+    background-color: #9E9E9E;
+    padding: 5px;
+    margin-right: 5px;
+    border: 2px solid transparent;
+    border-radius: 5px;
+}
+
+
+
+.fire:hover, .water:hover, .grass:hover, .electric:hover, .psychic:hover, .ice:hover, .dragon:hover, .dark:hover, .fairy:hover, .normal:hover, .fighting:hover, .flying:hover, .poison:hover, .ground:hover, .rock:hover, .bug:hover, .ghost:hover, .steel:hover {
+    background-color: beige;
+    border-color: black;
+    transition :1s;
 }
